--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.11.1",
     "dreamjs": "^0.1.5",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-filenames": "^2.0.0",
@@ -37,7 +41,11 @@
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^14.1.0",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
